--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="short_text">Ông Võ cho hay, các nước xác định giá đất Nhà nước bằng 70–80%</string>
     <string name="known_for">Known For</string>
     <string name="google_api_key">AIzaSyCJ2WQgICNM1RTBJDnU6EHR2ZSB3XIcOR4</string>
+    <string name="the_lord_of_the_rings">The Lord of the Rings</string>
 </resources>
