--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,11 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="actor_id">actor_id</string>
-    <string name="long_text">Ông Võ cho hay, các nước xác định giá đất Nhà nước bằng 70–80% giá thị trường là đủ. Việt Nam cũng nên theo cách thức thông lệ các nước đã làm. Giá trị thị trường đất đai, không phải là một con số học, mà là kết quả của bài toán ước lượng giá trị dựa vào số liệu thống kê.</string>
+    <string name="long_text">Ông Võ cho hay, các nước xác định giá đất Nhà nước bằng 70–80% giá thị trường là đủ. Việt Nam cũng nên theo cách thức thông lệ các nước đã làm. Giá trị thị trường đất đai, không phải là một con số học, mà là kết quả của bài toán ước lượng giá trị dựa vào số liệu thống kê. Giá trị thị trường đất đai, không phải là một con số học, mà là kết quả của bài toán ước lượng giá trị dựa vào số liệu thống kê. </string>
     <string name="short_text">Ông Võ cho hay, các nước xác định giá đất Nhà nước bằng 70–80%</string>
     <string name="known_for">Known For</string>
     <string name="google_api_key">AIzaSyCJ2WQgICNM1RTBJDnU6EHR2ZSB3XIcOR4</string>
     <string name="the_lord_of_the_rings">The Lord of the Rings</string>
+    <string name="actor">Actors</string>
+    <string name="tab_actor_description">Taoshfkjsdhfksdhfjsdhfkjsd</string>
 </resources>
